samples/_failures_safe/1761449837_206582_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_94df0bcc.c: In function ‘state_machine_process_event’:
./samples/SAFE/__tmp_94df0bcc.c:151:13: error: expected expression at end of input
  151 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_94df0bcc.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_94df0bcc.c:151:13: error: expected declaration or statement at end of input
